# japanese_test

./: .gitignore  Cargo.toml  Containerfile  README.md  kana.db  kana.db-shm  kana.db-wal  podman-compose.yml  pre_commit_instructions  progress.json
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
kana-tui/: Containerfile
kana-tui/src/: app_tests.rs  data.rs  tui.rs  ui.rs
src/: api.rs  app.rs  app_tests.rs  data.rs  db.rs  feedback.rs  gemini.rs  main.rs  models.rs  srs.rs  ui.rs
