[package]
name = "kana-tutor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.1"
textwrap = "0.16"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
color-eyre = "0.6"
thiserror = "2.0"
