[package]
name = "kana-tutor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.1"
textwrap = "0.16"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
# Bundled SQLite for portability. Added chrono for DateTime mapping.
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
anyhow = "1.0"
log = "0.4"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
