[package]
name = "kana-tutor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
textwrap = "0.16"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
# Bundled SQLite for portability. Added chrono for DateTime mapping.
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
anyhow = "1.0"
log = "0.4"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"

# 添加到 Cargo.toml 文件末尾

[profile.release]
lto = true        # 开启链接时优化 (Link Time Optimization)，大幅减小体积
strip = true      # 自动剥离符号表，进一步减小体积
codegen-units = 1 # 牺牲编译速度换取更好的运行时性能
opt-level = 3     # 最高级别的优化
panic = "abort"   # 移除 panic 时的堆栈展开代码，减小体积（可选）
